# ScriptingMachine4

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp
src/CSharpLibrary/: GameEntity.cs  GameExports.cs  GameSystem.cs  Library.csproj  Library.sln  MainClass.cs
src/CSharpLibrary/Properties/: launchSettings.json
src/CppHost/: Game.cpp  Game.hpp  GameCallbacks.cpp  GameCallbacks.hpp  GameEntities.cpp  Timer.cpp
src/CppHostUtilities/: Assembly.cpp  Assembly.hpp  ErrorWriter.cpp  ErrorWriter.hpp  SharpHost.cpp  SharpHost.hpp  Utility.hpp
